force-app/main/default/objects/SVMXC__Route_Stop__c/SVMXC__Route_Stop__c.object-meta.xml
<CustomObject>
    <description>Route stop contains specific stops within a route card along with the receiving, repair and shipment statuses</description>
    <label>Route Stop</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>