force-app/main/default/objects/SVMXC__Route_Stop__c/fields/SVMXC__Delivered_By__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Delivered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that delivered the product at the current location</description>
    <label>Delivered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Route_Stops1</relationshipName>
    <type>Lookup</type>
</CustomField>