force-app/main/default/objects/SVMXC__Route_Stop__c/fields/SVMXC__Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Delivered_On__c</fullName>
    <description>Date/time when the product was delivered at the current location</description>
    <label>Delivered On</label>
    <type>DateTime</type>
</CustomField>