force-app/main/default/objects/SVMXC__Route_Stop__c/fields/SVMXC__Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Stop_Number__c</fullName>
    <description>Stop number</description>
    <label>Stop Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>